2007-08-29  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Parse message including
	  INSERT/UPDATE/DELETE query acquires RowExclusiveLock. However
	  pgpool did not wait a response from each node. It was possible
	  to occur deadlock problem.

	  Fix memory leak in reset_prepared_list.

2007-07-26  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* child.c, pool.h, pool_connection_pool.c: SIGALRM handler didn't
	  safe. Because it called non-reentrant functions. We only set a
	  flag in SIGALRM handler. Then we close expired connections in
	  safe places.

2007-07-26  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_connection_pool.c: Fix memory leak when connection slot is
	  full.

2007-07-24  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool.h, pool_process_query.c: Detect deadlock in
	  do_command(). When insert_lock was true, kind mismatch error
	  occured.

2007-07-24  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* child.c, pool_type.h, pool_process_query.c: pgpool chooses it
	  after receiving AuthenticationOK('R') message. So pgpool load
	  balance to the same node inside a same session.

2007-07-23  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pgpool.conf.sample, pool.h, pool_config.l, pool_process_query.c:
	  Add new parameter named "replicate_select". Default value is
	  'false'. If it is true, pgpool replicates SELECT queries when
	  load balancing is disabled. This is a old specification which
	  was V1.0. If it is false, pgpool only sends them to the master
	  node. This is a current specification.

2007-07-17  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Fix hang up when backend node did fast or
	  immediate shutdown.

2007-07-11  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool.h, pool_stream.c, pool_process_query.c: Fix kind mismatch
	  error when deadlock occured.

2007-07-09  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* main.c: Fix signal handling.

2007-07-05  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>
